--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,4 @@ services:
     ports:
       - "3000:${PAPERLESS_AI_PORT:-3000}"
     volumes:
-      - paperless-ai_data:/app/data
-
-volumes:
-  paperless-ai_data:
+      - ./data:/app/data
